--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,7 @@
           <span class="badge badge-ok" id="streamBadge" title="Streaming status">STREAM OK</span>
           <span class="badge badge-ok" id="schedBadge" title="Scheduler status">SCHED OK</span>
           <span class="badge badge-ok" id="remoteBadge" title="Remote contribution status">REMOTE OK</span>
+          <span class="badge badge-demo" id="apiBadge" title="Data source">DEMO</span>
           <span class="badge badge-mode" id="modeBadge" title="User role">OPERATOR</span>
           <span class="badge badge-onair" id="onAirBadge" title="Program output">ON AIR</span>
         </div>
