--- a/web/index.html
+++ b/web/index.html
@@ -172,6 +172,11 @@
           <div class="mon-card">
             <div class="mon-title">Listen Live</div>
             <div class="mon-row"><span>Status</span><span id="mListenStatus">Stopped</span></div>
+            <div class="mon-row"><span>ICE</span><span id="mListenIce" class="mono muted">-</span></div>
+            <div class="mon-row"><span>Peer</span><span id="mListenPeer" class="mono muted">-</span></div>
+            <div class="mon-row"><span>Signaling</span><span id="mListenSignaling" class="mono muted">-</span></div>
+            <div class="mon-row"><span>Gathering</span><span id="mListenGathering" class="mono muted">-</span></div>
+
             <div class="mon-row"><span>Notes</span><span class="muted">WebRTC • Opus • low-latency</span></div>
             <div class="mon-actions" style="display:flex; gap:8px; margin-top:10px;">
               <button class="btn" id="btnListenStart">Start</button>
