--- a/web/index.html
+++ b/web/index.html
@@ -177,6 +177,17 @@
             <div class="mon-row"><span>Signaling</span><span id="mListenSignaling" class="mono muted">-</span></div>
             <div class="mon-row"><span>Gathering</span><span id="mListenGathering" class="mono muted">-</span></div>
 
+            <!--
+              Meter source visibility (v0.1.65)
+
+              When Listen Live is active, the UI can receive meter snapshots over a WebRTC
+              data channel. This keeps meter timing closer to what the operator hears.
+              If the data channel goes quiet (or Listen Live is stopped), we fall back to
+              HTTP polling via /api/v1/meters.
+            -->
+            <div class="mon-row"><span>Meters</span><span id="mListenMeters" class="mono muted">-</span></div>
+            <div class="mon-row"><span>Meter age</span><span id="mListenMeterAge" class="mono muted">-</span></div>
+
             <div class="mon-row"><span>Notes</span><span class="muted">WebRTC • Opus • low-latency</span></div>
             <div class="mon-actions" style="display:flex; gap:8px; margin-top:10px;">
               <button class="btn" id="btnListenStart">Start</button>
@@ -268,6 +279,41 @@
         <div class="alarms">
           <div class="mon-title">Alarms</div>
           <div class="alarm ok">No active alarms</div>
+        </div>
+      </div>
+    </div>
+
+    <!--
+      Shortcut Help modal
+
+      We intentionally keep this as plain HTML (no framework) so the UI remains
+      deployable as static assets. Open with '?' and close with Esc.
+    -->
+    <div class="modal" id="helpModal" aria-hidden="true" role="dialog" aria-label="Keyboard shortcuts">
+      <div class="modal-scrim" id="helpScrim"></div>
+      <div class="modal-card" role="document">
+        <div class="modal-head">
+          <div>
+            <div class="modal-title">Keyboard shortcuts</div>
+            <div class="modal-sub">Fast navigation for operators</div>
+          </div>
+          <button class="btn btn-ghost" id="helpClose" aria-label="Close help">✕</button>
+        </div>
+        <div class="modal-body">
+          <div class="help-grid">
+            <div class="help-row"><kbd>?</kbd><span>Open this help</span></div>
+            <div class="help-row"><kbd>Esc</kbd><span>Close drawers / dialogs</span></div>
+            <div class="help-row"><kbd>L</kbd><span>Open Library</span></div>
+            <div class="help-row"><kbd>M</kbd><span>Open Monitors</span></div>
+            <div class="help-row"><kbd>S</kbd><span>Skip current item</span></div>
+            <div class="help-row"><kbd>D</kbd><span>Dump / stop playout</span></div>
+            <div class="help-row"><kbd>R</kbd><span>Reload status</span></div>
+            <div class="help-row"><kbd>Ctrl</kbd> + <kbd>F</kbd><span>Focus Library search</span></div>
+            <div class="help-row"><kbd>Ctrl</kbd> + <kbd>Z</kbd><span>Undo last reorder</span></div>
+          </div>
+          <div class="muted" style="margin-top:12px;">
+            Tip: while dragging to reorder, live refresh is deferred to keep the drag stable.
+          </div>
         </div>
       </div>
     </div>
