--- a/web/index.html
+++ b/web/index.html
@@ -48,9 +48,6 @@
           </div>
         </div>
         <div class="log-list" id="logList"></div>
-        <div class="panel-footer">
-          <div class="hint">Shortcuts: <kbd>L</kbd> Library • <kbd>M</kbd> Monitors • <kbd>S</kbd> Skip • <kbd>D</kbd> Dump • <kbd>R</kbd> Reload</div>
-        </div>
       </section>
 
       <section class="panel center">
@@ -137,7 +134,7 @@
           2) Control Panel: operator utilities (first: one-click Listen Live)
         -->
 
-        <section class="panel nested side-sub">
+        <section class="panel nested side-sub control-panel">
           <div class="panel-title panel-title-compact">
             <div>Remote Producers</div>
             <div class="panel-meta">Compact</div>
@@ -155,8 +152,8 @@
             <div class="panel-meta">Operator</div>
           </div>
           <div class="side-controls">
-            <button class="btn btn-primary w100" id="btnLiveAudio">Listen Live</button>
-            <div class="muted-note">Opens Monitors and starts WebRTC audio.</div>
+            <button class="btn btn-primary w100" id="btnLiveAudio">Start Audio</button>
+            <div class="muted-note">Starts low-latency WebRTC audio.</div>
           </div>
         </section>
       </aside>
