--- a/web/index.html
+++ b/web/index.html
@@ -134,7 +134,7 @@
           2) Control Panel: operator utilities (first: one-click Listen Live)
         -->
 
-        <section class="panel nested side-sub control-panel">
+        <section class="panel nested side-sub remote-producers">
           <div class="panel-title panel-title-compact">
             <div>Remote Producers</div>
             <div class="panel-meta">Compact</div>
@@ -146,14 +146,13 @@
           </div>
         </section>
 
-        <section class="panel nested side-sub">
+        <section class="panel nested side-sub control-panel">
           <div class="panel-title panel-title-compact">
             <div>Control Panel</div>
             <div class="panel-meta">Operator</div>
           </div>
           <div class="side-controls">
             <button class="btn btn-primary w100" id="btnLiveAudio">Start Audio</button>
-            <div class="muted-note">Starts low-latency WebRTC audio.</div>
           </div>
         </section>
       </aside>
